# mytv-desktop

./: README.md  index.html  package.json  vite.config.js
.github/workflows/: main.yml
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  m3u.rs  main.rs  player.rs  speedrun.rs
src-tauri/src/speedtest/: channel.rs  mod.rs  output.rs  speedtest.rs  subscribe.rs  task.rs
src/stores/: tv.js
