[package]
name    = "mytv-desktop"
version = "1.0.0"
edition = "2021"

[lib]
name = "mytv_desktop_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mytv-desktop"
path = "src/main.rs"

[dependencies]
tauri              = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
anyhow             = "1"
regex              = "1"
url                = "2"
once_cell          = "1"
chrono             = { version = "0.4", features = ["clock"] }
futures-util       = "0.3"
dirs               = "5"
# libmpv bindings — plays video without requiring mpv installed
libmpv             = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip         = "symbols"
lto           = "thin"
codegen-units = 1
